--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/New folder/fontawesome-free-5.15.1-web/css/all.css">
-    <link rel="stylesheet" href="/todo app/style.css">
-    
+    <title>Task Manager</title>
+    <!-- <link rel="stylesheet" href="/New folder/fontawesome-free-5.15.1-web/css/all.css"> -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -34,7 +33,8 @@
     <div class="dev">
         <p>This App is Designed & maintained by Vibhay Singh</p>
     </div>
-    <script src="/todo app/script.js"></script>
+    <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/2ef16c69c5.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
